# serializer version: 1
# name: test_platform_setup_and_discovery[light.ab1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.ab1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.aoyweq8xbx7qfndijdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.ab1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 255,
      'color_mode': <ColorMode.HS: 'hs'>,
      'color_temp': None,
      'color_temp_kelvin': None,
      'friendly_name': 'AB1',
      'hs_color': tuple(
        6.0,
        97.8,
      ),
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': tuple(
        255,
        31,
        6,
      ),
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': tuple(
        0.693,
        0.304,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.ab1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_platform_setup_and_discovery[light.ab6-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.ab6',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.sj55nxhjftilowkejdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.ab6-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'ab6',
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.ab6',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery[light.arbeitszimmer_led-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.HS: 'hs'>,
        <ColorMode.WHITE: 'white'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.arbeitszimmer_led',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.jfpdpavoqgoqsn3cjdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.arbeitszimmer_led-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 255,
      'color_mode': <ColorMode.HS: 'hs'>,
      'friendly_name': 'Arbeitszimmer led',
      'hs_color': tuple(
        0.0,
        100.0,
      ),
      'rgb_color': tuple(
        255,
        0,
        0,
      ),
      'supported_color_modes': list([
        <ColorMode.HS: 'hs'>,
        <ColorMode.WHITE: 'white'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': tuple(
        0.701,
        0.299,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.arbeitszimmer_led',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_platform_setup_and_discovery[light.b2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.b2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.ijne16zv8vpqmubnjdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.b2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'b2',
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.b2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery[light.bedroom-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.bedroom',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.CyD4ctKVrAFSSXSbjdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.bedroom-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'friendly_name': 'bedroom',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.bedroom',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[light.blissradia-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.blissradia',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.bfpewgk8r6fhmissdyzbswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.blissradia-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'friendly_name': 'BlissRadia ',
      'hs_color': None,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.blissradia',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[light.cam_garage_indicator_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'light.cam_garage_indicator_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Indicator light',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.mgcpxpmovasazerdpsbasic_indicator',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.cam_garage_indicator_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'color_mode': <ColorMode.ONOFF: 'onoff'>,
      'friendly_name': 'CAM GARAGE Indicator light',
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.cam_garage_indicator_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_platform_setup_and_discovery[light.cam_porch_indicator_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'light.cam_porch_indicator_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Indicator light',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.uBLyTOvlhoRWXKjrpsbasic_indicator',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.cam_porch_indicator_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'color_mode': None,
      'friendly_name': 'CAM PORCH Indicator light',
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.cam_porch_indicator_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[light.ceiling_fan_light_v2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.ceiling_fan_light_v2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.6wxksqu35c61sce9dsfswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.ceiling_fan_light_v2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
      'color_temp': 500,
      'color_temp_kelvin': 2000,
      'friendly_name': 'ceiling fan/Light v2',
      'hs_color': tuple(
        30.601,
        94.547,
      ),
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': tuple(
        255,
        137,
        14,
      ),
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': tuple(
        0.598,
        0.383,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.ceiling_fan_light_v2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_platform_setup_and_discovery[light.ceiling_fan_with_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.ceiling_fan_with_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.ijzjlqwmv1blwe0gsflight',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.ceiling_fan_with_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 255,
      'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
      'color_temp': 500,
      'color_temp_kelvin': 2000,
      'friendly_name': 'Ceiling Fan With Light',
      'hs_color': tuple(
        30.601,
        94.547,
      ),
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': tuple(
        255,
        137,
        14,
      ),
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': tuple(
        0.598,
        0.383,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.ceiling_fan_with_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_platform_setup_and_discovery[light.ceiling_portal-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.ceiling_portal',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.buzituffc13pgb1jjdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.ceiling_portal-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'color_temp': None,
      'color_temp_kelvin': None,
      'friendly_name': 'Ceiling Portal',
      'hs_color': None,
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.ceiling_portal',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[light.colorful_pir_night_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.colorful_pir_night_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.nt3mpibadxfqkegldygswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.colorful_pir_night_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'color_temp': None,
      'color_temp_kelvin': None,
      'friendly_name': 'Colorful PIR Night Light',
      'hs_color': None,
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.colorful_pir_night_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[light.directietkamer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.directietkamer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.trffx1ktlyu3tnmljdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.directietkamer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'color_temp': None,
      'color_temp_kelvin': None,
      'friendly_name': 'DirectietKamer',
      'hs_color': None,
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.directietkamer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[light.dressoir_spot-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.dressoir_spot',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.w8oht6v8aauqa0y8jdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.dressoir_spot-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'color_temp': None,
      'color_temp_kelvin': None,
      'friendly_name': 'dressoir spot',
      'hs_color': None,
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.dressoir_spot',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[light.druckerhell-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.druckerhell',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.queafegmhhmtivdxjdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.druckerhell-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 255,
      'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
      'color_temp': 500,
      'color_temp_kelvin': 2000,
      'friendly_name': 'druckerhell',
      'hs_color': tuple(
        30.601,
        94.547,
      ),
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': tuple(
        255,
        137,
        14,
      ),
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': tuple(
        0.598,
        0.383,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.druckerhell',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_platform_setup_and_discovery[light.entry_stairs-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.entry_stairs',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.VA4QyBNZHkJ2Xa4hjdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.entry_stairs-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Entry Stairs',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.entry_stairs',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery[light.erker_1_gold-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.erker_1_gold',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.kkande5hk6sfdkoxjdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.erker_1_gold-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 255,
      'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
      'color_temp': 500,
      'color_temp_kelvin': 2000,
      'friendly_name': 'ERKER 1-Gold ',
      'hs_color': tuple(
        30.601,
        94.547,
      ),
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': tuple(
        255,
        137,
        14,
      ),
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': tuple(
        0.598,
        0.383,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.erker_1_gold',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_platform_setup_and_discovery[light.fakkel_8-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.fakkel_8',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.z8woiryqydmzonjdjdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.fakkel_8-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 70,
      'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
      'color_temp': 500,
      'color_temp_kelvin': 2000,
      'friendly_name': 'Fakkel 8',
      'hs_color': tuple(
        30.601,
        94.547,
      ),
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': tuple(
        255,
        137,
        14,
      ),
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': tuple(
        0.598,
        0.383,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.fakkel_8',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_platform_setup_and_discovery[light.floodlight-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.HS: 'hs'>,
        <ColorMode.WHITE: 'white'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.floodlight',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.yky6kunazmaitupzjdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.floodlight-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'friendly_name': 'Floodlight',
      'hs_color': None,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.HS: 'hs'>,
        <ColorMode.WHITE: 'white'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.floodlight',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[light.front_right_lighting_trap-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.front_right_lighting_trap',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.gjnpc0eojdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.front_right_lighting_trap-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'color_temp': None,
      'color_temp_kelvin': None,
      'friendly_name': 'Front right Lighting trap',
      'hs_color': None,
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.front_right_lighting_trap',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[light.garage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.garage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.7axah58vfydd8cphjdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.garage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'color_temp': None,
      'color_temp_kelvin': None,
      'friendly_name': 'Garage',
      'hs_color': None,
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.garage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[light.garage_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.HS: 'hs'>,
        <ColorMode.WHITE: 'white'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.garage_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.r4yrlr705ei31ikmjdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.garage_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 138,
      'color_mode': <ColorMode.WHITE: 'white'>,
      'friendly_name': 'Garage light',
      'hs_color': None,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.HS: 'hs'>,
        <ColorMode.WHITE: 'white'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.garage_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_platform_setup_and_discovery[light.garage_light_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.garage_light_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Light 1',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'indexed_light',
    'unique_id': 'tuya.7axah58vfydd8cphjdswitch_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.garage_light_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'color_mode': None,
      'friendly_name': 'Garage Light 1',
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.garage_light_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[light.gengske-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.gengske',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.87yarxyp23ap1vazjdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.gengske-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'color_temp': None,
      'color_temp_kelvin': None,
      'friendly_name': 'Gengske 💡 ',
      'hs_color': None,
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.gengske',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[light.hall-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.hall',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.6gsqieoh1yzjvxlnjdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.hall-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'color_temp': None,
      'color_temp_kelvin': None,
      'friendly_name': 'hall 💡 ',
      'hs_color': None,
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.hall',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[light.ieskas-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.ieskas',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.86kdcut3hiqqddlijdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.ieskas-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 255,
      'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
      'color_temp': 285,
      'color_temp_kelvin': 3508,
      'friendly_name': 'Ieskas',
      'hs_color': tuple(
        27.165,
        44.6,
      ),
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': tuple(
        255,
        193,
        141,
      ),
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': tuple(
        0.453,
        0.374,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.ieskas',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_platform_setup_and_discovery[light.landing-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.landing',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.4fO1qIzYbcdMUHqAjdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.landing-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'color_temp': None,
      'color_temp_kelvin': None,
      'friendly_name': 'Landing',
      'hs_color': None,
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.landing',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[light.led_keuken_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.led_keuken_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.97k3pwirjdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.led_keuken_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 255,
      'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
      'color_temp': 500,
      'color_temp_kelvin': 2000,
      'friendly_name': 'LED KEUKEN 2',
      'hs_color': tuple(
        30.601,
        94.547,
      ),
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': tuple(
        255,
        137,
        14,
      ),
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': tuple(
        0.598,
        0.383,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.led_keuken_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_platform_setup_and_discovery[light.led_porch_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.led_porch_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.7jxnjpiltmj2zyaijdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.led_porch_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LED Porch 2',
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.led_porch_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery[light.lsc_party_string_light_rgbic_cct-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.lsc_party_string_light_rgbic_cct',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.x4nogasbi8ggpb3lcdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.lsc_party_string_light_rgbic_cct-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LSC Party String Light RGBIC+CCT ',
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.lsc_party_string_light_rgbic_cct',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery[light.lumy_garage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.lumy_garage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.4pa1uobdjdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.lumy_garage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'color_temp': None,
      'color_temp_kelvin': None,
      'friendly_name': 'Lumy Garage',
      'hs_color': None,
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.lumy_garage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[light.lumy_hall-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.lumy_hall',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.bgnj6bafrdgb1xmajdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.lumy_hall-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'color_temp': None,
      'color_temp_kelvin': None,
      'friendly_name': 'Lumy Hall',
      'hs_color': None,
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.lumy_hall',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[light.master_bedroom_tv_lights-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.master_bedroom_tv_lights',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.vnj3sa6mqahro6phjdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.master_bedroom_tv_lights-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 51,
      'color_mode': <ColorMode.HS: 'hs'>,
      'color_temp': None,
      'color_temp_kelvin': None,
      'friendly_name': 'Master bedroom TV lights',
      'hs_color': tuple(
        26.072,
        100.0,
      ),
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': tuple(
        255,
        111,
        0,
      ),
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': tuple(
        0.632,
        0.358,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.master_bedroom_tv_lights',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_platform_setup_and_discovery[light.parker_ceiling_fan_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.parker_ceiling_fan_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.im3fum2zt73boagkjdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.parker_ceiling_fan_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Parker Ceiling Fan 1',
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.parker_ceiling_fan_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery[light.pergola_backlight-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'light.pergola_backlight',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Backlight',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'backlight',
    'unique_id': 'tuya.shga3pmbkwhthvqxgklcswitch_backlight',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.pergola_backlight-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'color_mode': None,
      'friendly_name': 'Pergola Backlight',
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.pergola_backlight',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[light.plafond_bureau-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.plafond_bureau',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.t88qaeyydamm9xhsddxswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.plafond_bureau-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 241,
      'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
      'color_temp': 260,
      'color_temp_kelvin': 3832,
      'friendly_name': 'Plafond bureau ',
      'hs_color': tuple(
        26.903,
        38.001,
      ),
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': tuple(
        255,
        202,
        158,
      ),
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': tuple(
        0.43,
        0.368,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.plafond_bureau',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_platform_setup_and_discovery[light.pokerlamp_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.pokerlamp_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.ngcubvaqoraolsmtjdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.pokerlamp_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Pokerlamp 1',
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.pokerlamp_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery[light.pokerlamp_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.pokerlamp_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.z7cu5t8bl9tt9fabjdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.pokerlamp_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Pokerlamp 2',
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.pokerlamp_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery[light.porch_light_e-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.HS: 'hs'>,
        <ColorMode.WHITE: 'white'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.porch_light_e',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.klgxmpwvdhw7tzs8jdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.porch_light_e-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'friendly_name': 'Porch light E',
      'hs_color': None,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.HS: 'hs'>,
        <ColorMode.WHITE: 'white'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.porch_light_e',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[light.powerasia_r2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.powerasia_r2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.glsehgu8jdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.powerasia_r2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
      'color_temp': None,
      'color_temp_kelvin': None,
      'friendly_name': 'POWERASIA R2',
      'hs_color': None,
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.powerasia_r2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_platform_setup_and_discovery[light.roller_shutter_living_room_backlight-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'light.roller_shutter_living_room_backlight',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Backlight',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'backlight',
    'unique_id': 'tuya.jzpap0inhkykqtlwgklcswitch_backlight',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.roller_shutter_living_room_backlight-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'color_mode': None,
      'friendly_name': 'Roller shutter Living Room Backlight',
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.roller_shutter_living_room_backlight',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[light.sjiethoes-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.sjiethoes',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.rdq0bn4dzuwx2qfujdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.sjiethoes-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Sjiethoes',
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.sjiethoes',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery[light.slaapkamer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.slaapkamer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.ajkdo1bm2rcmpuufjdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.slaapkamer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'color_temp': None,
      'color_temp_kelvin': None,
      'friendly_name': 'Slaapkamer',
      'hs_color': None,
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.slaapkamer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[light.smart_bulb_rgbcw-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.smart_bulb_rgbcw',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.qhgghufzqtwloqoqjdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.smart_bulb_rgbcw-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'color_temp': None,
      'color_temp_kelvin': None,
      'friendly_name': 'Smart Bulb RGBCW',
      'hs_color': None,
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.smart_bulb_rgbcw',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[light.smart_white_noise_machine-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.smart_white_noise_machine',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.ri7eegdifufzdi54dyzbswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.smart_white_noise_machine-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 1003,
      'color_mode': <ColorMode.HS: 'hs'>,
      'friendly_name': 'Smart White Noise Machine',
      'hs_color': tuple(
        239.666,
        393.307,
      ),
      'rgb_color': tuple(
        -748,
        -742,
        255,
      ),
      'supported_color_modes': list([
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': tuple(
        -0.03,
        -0.215,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.smart_white_noise_machine',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_platform_setup_and_discovery[light.solar_zijpad-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.solar_zijpad',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.couukaypjdnytswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.solar_zijpad-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Solar zijpad',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.solar_zijpad',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery[light.stairs-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.HS: 'hs'>,
        <ColorMode.WHITE: 'white'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.stairs',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.zf8vgiwoa07jwegtjdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.stairs-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'friendly_name': 'Stairs',
      'hs_color': None,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.HS: 'hs'>,
        <ColorMode.WHITE: 'white'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.stairs',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[light.stoel-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.stoel',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.nxdcy0uidplnhkazjdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.stoel-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Stoel',
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.stoel',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery[light.strip_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.strip_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.bak2crzmabancwqvjdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.strip_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Strip 2',
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.strip_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery[light.study_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.study_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.sifg4pfqsylsayg0jdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.study_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'color_temp': None,
      'color_temp_kelvin': None,
      'friendly_name': 'Study 1',
      'hs_color': None,
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.study_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[light.tapparelle_studio_backlight-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'light.tapparelle_studio_backlight',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Backlight',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'backlight',
    'unique_id': 'tuya.2w46jyhngklcswitch_backlight',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.tapparelle_studio_backlight-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'color_mode': <ColorMode.ONOFF: 'onoff'>,
      'friendly_name': 'Tapparelle studio Backlight',
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.tapparelle_studio_backlight',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_platform_setup_and_discovery[light.tower_fan_ca_407g_smart_backlight-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'light.tower_fan_ca_407g_smart_backlight',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Backlight',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'backlight',
    'unique_id': 'tuya.lflvu8cazha8af9jsklight',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.tower_fan_ca_407g_smart_backlight-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'color_mode': <ColorMode.ONOFF: 'onoff'>,
      'friendly_name': 'Tower Fan CA-407G Smart Backlight',
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.tower_fan_ca_407g_smart_backlight',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_platform_setup_and_discovery[light.wc_d1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.wc_d1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.6o148laaosbf0g4djdswitch_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[light.wc_d1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'WC D1',
      'max_color_temp_kelvin': 6500,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.wc_d1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
